--- a/page7.html
+++ b/page7.html
@@ -53,8 +53,8 @@
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
 						<a class="nav-link link text-black display-4" href="https://mobiri.se">Beranda&nbsp;</a>
 					</li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Profil</a><div class="dropdown-menu" aria-labelledby="dropdown-770"><a class="text-black dropdown-item text-primary display-4" href="page7.html">Sejarah Sekolah<br></a><a class="text-black show dropdown-item text-primary display-4" href="page10.html#features10-1t">Visi &amp; Misi</a><a class="text-black show dropdown-item text-primary display-4" href="page7.html">Struktur Organisasi</a><a class="text-black dropdown-item text-primary display-4" href="page7.html">Fasilitas</a><a class="text-black show dropdown-item text-primary display-4" href="page7.html">Tujuan</a></div></li>
-					<li class="nav-item dropdown">
-						<a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Akademik</a><div class="dropdown-menu" aria-labelledby="dropdown-460"><a class="text-black dropdown-item text-primary display-4" href="page7.html">Ekstrakulikuler</a></div>
+					<li class="nav-item dropdown open">
+						<a class="nav-link link text-black dropdown-toggle show display-4" href="https://mobiri.se" aria-expanded="true" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Akademik</a><div class="dropdown-menu show" aria-labelledby="dropdown-460" data-bs-popper="none"><a class="text-black dropdown-item text-primary display-4" href="page7.html">Ekstrakulikuler</a></div>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Informasi</a><div class="dropdown-menu" aria-labelledby="dropdown-273"><a class="text-black dropdown-item text-primary display-4" href="page7.html">pengumuman&nbsp;</a></div>
@@ -116,11 +116,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10">
-                <div class="carousel slide" id="ueW3pGgnZe" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="ueW6yQOE0P" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ueW3pGgnZe" data-bs-target="#ueW3pGgnZe"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ueW3pGgnZe" data-bs-target="#ueW3pGgnZe"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ueW3pGgnZe" data-bs-target="#ueW3pGgnZe"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ueW6yQOE0P" data-bs-target="#ueW6yQOE0P"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ueW6yQOE0P" data-bs-target="#ueW6yQOE0P"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ueW6yQOE0P" data-bs-target="#ueW6yQOE0P"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -163,11 +163,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ueW3pGgnZe">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ueW6yQOE0P">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ueW3pGgnZe">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ueW6yQOE0P">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -241,7 +241,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3088923" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3088923" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
