--- a/page11.html
+++ b/page11.html
@@ -68,11 +68,11 @@
 
 <section data-bs-version="5.1" class="slider3 cid-ufgxAcQor5" id="slider03-6s">
     
-    <div class="carousel slide" id="ufgIw7MNnF" data-interval="5000" data-bs-interval="5000">
+    <div class="carousel slide" id="ufgKASxq5b" data-interval="5000" data-bs-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#ufgIw7MNnF" data-bs-target="#ufgIw7MNnF"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#ufgKASxq5b" data-bs-target="#ufgKASxq5b"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -139,11 +139,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ufgIw7MNnF">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ufgKASxq5b">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ufgIw7MNnF">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ufgKASxq5b">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
@@ -206,7 +206,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3088923" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3088923" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
